<resources>
    <string name="app_name">LifeTrack</string>

    <string name="title">Set a title</string>
    <string name="question">Set a question</string>

    <string name="answer">Set a the type of answer:</string>
    <string name="zinco">Zinco</string>
    <string name="observations">Observations</string>

    <string name="channelname">TrackLife</string>
    <string name="channeldescription">Here you receive the questions for the data you want to collect.</string>
    <string name="add_observation">Add Observation</string>

    <string name="title_activity_display_obs">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="current_observations">Current Observations</string>
    <string name="create_new_observation">Create new observation</string>
    <string name="name_of_the_observation">Name of the observation</string>
    <string name="data_type">Data type</string>
    <string name="notification_time">Notification Time</string>

    <string-array name="datatype_array">
        <item>Real number</item>
        <item>0,1,2,...</item>
        <item>Yes/No</item>
    </string-array>


</resources>