<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fragment_newobs_CreateObsHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_new_observation"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center_horizontal" />

        <EditText
            android:id="@+id/fragment_newobs_choosename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/name_of_the_observation"
            app:layout_constraintTop_toBottomOf="@+id/fragment_newobs_CreateObsHeading" />

        <LinearLayout
            android:id="@+id/fragment_newobs_DataTypeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/fragment_newobs_choosename">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.4"
                android:text="@string/data_type"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/fragment_CreateObs_spinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"/>


        </LinearLayout>


        <LinearLayout
            android:id="@+id/fragment_newobs_timePickerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/fragment_newobs_DataTypeLayout">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.4"
                android:text="Alarm Time"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />



            <TimePicker
                android:id="@+id/fragment_createobs_editTextTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:timePickerMode="spinner"/>

        </LinearLayout>

        <CheckBox
            android:id="@+id/fragment_createalarm_recurring"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="Recurring Alarm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_newobs_timePickerLayout" />

        <LinearLayout
            android:id="@+id/fragment_createalarm_recurring_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/fragment_createalarm_recurring">

            <CheckBox
                android:id="@+id/fragment_createalarm_checkMon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mon" />

            <CheckBox
                android:id="@+id/fragment_createalarm_checkTue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tue" />

            <CheckBox
                android:id="@+id/fragment_createalarm_checkWed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Wed" />

            <CheckBox
                android:id="@+id/fragment_createalarm_checkThu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Thu" />

            <CheckBox
                android:id="@+id/fragment_createalarm_checkFri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fri" />

            <CheckBox
                android:id="@+id/fragment_createalarm_checkSat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sat" />

            <CheckBox
                android:id="@+id/fragment_createalarm_checkSun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sun" />

        </LinearLayout>

        <Button
            android:id="@+id/fragment_createalarm_scheduleAlarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Schedule Alarm"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="133dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>